force-app/main/default/objects/QA_B_API__c/QA_B_API__c.object-meta.xml
<CustomObject>
    <label>QA_B</label>
    <nameField>
        <label>QA_B Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA_B</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>