force-app/main/default/objects/QA_B_API__c/fields/Account_c__c.field-meta.xml
<CustomField>
    <fullName>Account_c__c</fullName>
    <label>Account__c</label>
    <length>200</length>
    <type>Text</type>
</CustomField>