force-app/main/default/objects/QA_B_API__c/fields/Active_API__c.field-meta.xml
<CustomField>
    <fullName>Active_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>