force-app/main/default/objects/QA_B_API__c/fields/cmt_Formula_Local__c.field-meta.xml
<CustomField>
    <fullName>cmt_Formula_Local__c</fullName>
    <formula>$CustomMetadata.Support_Tier__mdt.Bronze.Default_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cmt Formula Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>