force-app/main/default/objects/QA_B_API__c/fields/cmt_Formula_with_Record__c.field-meta.xml
<CustomField>
    <fullName>cmt_Formula_with_Record__c</fullName>
    <formula>$CustomMetadata.Support_Level_Mapping__mdt.Free_Support_Product.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cmt Formula with Record</label>
    <type>Text</type>
</CustomField>