force-app/main/default/objects/QA_B_API__c/fields/cmtFormula_custom_API__c.field-meta.xml
<CustomField>
    <fullName>cmtFormula_custom_API__c</fullName>
    <formula>$CustomMetadata.dlrs__LookupRollupSummary2__mdt.new_manage.dlrs__ParentObject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cmtFormula_custom</label>
    <type>Text</type>
</CustomField>