force-app/main/default/objects/QA_B_API__c/fields/Description_API__c.field-meta.xml
<CustomField>
    <fullName>Description_API__c</fullName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>