force-app/main/default/objects/QA_B_API__c/fields/Dollar_API__c.field-meta.xml
<CustomField>
    <fullName>Dollar_API__c</fullName>
    <formula>$User.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollar</label>
    <type>Text</type>
</CustomField>