force-app/main/default/objects/QA_B_API__c/fields/QA_A_Lookup_API__c.field-meta.xml
<CustomField>
    <fullName>QA_A_Lookup_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA_A_Lookup</label>
    <referenceTo>QA_A_API__c</referenceTo>
    <relationshipLabel>QA_B</relationshipLabel>
    <relationshipName>QA_B</relationshipName>
    <type>Lookup</type>
</CustomField>