force-app/main/default/objects/QA_B_API__c/fields/Status_API__c.field-meta.xml
<CustomField>
    <fullName>Status_API__c</fullName>
    <label>Status Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_BugPriority</valueSetName>
    </valueSet>
</CustomField>