force-app/main/default/objects/QA_B_API__c/recordTypes/qa_a_record_type_2_API.recordType-meta.xml
<RecordType>
    <fullName>qa_a_record_type_2_API</fullName>
    <active>true</active>
    <label>qa_a_record_type_2</label>
</RecordType>