force-app/main/default/objects/QA_B_API__c/recordTypes/qa_b_record_type_API.recordType-meta.xml
<RecordType>
    <fullName>qa_b_record_type_API</fullName>
    <active>true</active>
    <description>for qa_b</description>
    <label>qa_b_record_type</label>
</RecordType>